# ProbeBot

./: .gitignore  LICENSE  README.md
ProbeBot/: error_detection.keras  pyproject.toml  testing_data_labels.json  training_data_labels.json
ProbeBot/probebot/: GenerateImageLabels.py  MeasureTip  edge_detection.py  experiment.py  featureExtraction.py  image_prompt.txt  loadModel.py  loadModelTorch.py  probeMeasurement.py  trainModel.py  trainModelTorch.py  training_data_labels.json
ProbeBot/probebot/ProbeImages/: 4931_001.tif  4931_002.tif  4931_003.tif  4931_004.tif  4931_005.tif  4931_006.tif  4931_007.tif  4931_008.tif  4931_009.tif  4931_010.tif  4931_011.tif  4931_012.tif  4932_001.tif  4932_002.tif  4932_003.tif  4932_004.tif  4932_005.tif  4932_006.tif  4932_007.tif  4932_008.tif  4932_009.tif  4932_010.tif  4932_011.tif  4932_012.tif  4933_001.tif  4933_002.tif  4933_003.tif  4933_004.tif  4933_005.tif  4933_006.tif  4933_007.tif  4933_008.tif  4933_009.tif  4933_010.tif  4933_011.tif  4933_012.tif  4934_001.tif  4934_002.tif  4934_003.tif  4934_004.tif  (+43 more)
ProbeBot/probebot/backend/: entities.py  main.py  routers.py
ProbeBot/probebot/images/: 3621_001.tif  3621_002.tif  3621_003.tif  3621_004.tif  3621_005.tif  3621_006.tif  3621_007.tif  3621_008.tif  3621_009.tif  3621_010.tif  3621_011.tif  3621_012.tif  3628_001.tif  3628_002.tif  3628_003.tif  3628_004.tif  3628_005.tif  3628_006.tif  3628_007.tif  3628_008.tif  3628_009.tif  3628_010.tif  3628_011.tif  3628_012.tif  3629_001.tif  3629_002.tif  3629_003.tif  3629_004.tif  3629_005.tif  3629_006.tif  (+18 more)
(+1 files in other folders)
